# musicSynthesizer

./: CMakeLists.txt
src/: event.cpp  event.hpp  instrument.cpp  instrument.hpp  main.cpp  message_queue.cpp  message_queue.hpp  midi.hpp  midiplayer.cpp  midiplayer.hpp  noise_generator.cpp  shared_double_buffer.cpp  shared_double_buffer.hpp  signal.cpp  signal.hpp  synthesizer.cpp  synthesizer.hpp  test_midiplayer.cpp  track.cpp  track.hpp
tests/: CMakeLists.txt  compare.cpp
